--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,5 +21,5 @@ jobs:
         cache: 'npm'
     - name: Install node modules (npm dependencies)
       run: npm install
-    - name: Run unit tests
+    - name: Run Unit tests
       run: npm run test:unit
