--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,5 +21,7 @@ jobs:
         cache: 'npm'
     - name: Install node modules (npm dependencies)
       run: npm install
-    - name: Run Unit tests
+    - name: Run Unit Tests
       run: npm run test:unit
+    - name: display softuni username
+      run: echo "VaninaDimitrova - softuni username"
