--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -13,9 +13,9 @@ jobs:
     
     steps:
     - name: Checkout repo
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
     - name: Use Node.js 20.x
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v4
       with:
         node-version: 20.x
         cache: 'npm'
@@ -25,3 +25,30 @@ jobs:
       run: npm run test:unit
     - name: display softuni username
       run: echo "VaninaDimitrova - softuni username"
+    - name: install Playwright for UI tests
+      run: npx playwright install
+    - name: run UI tests
+      run: npm run test:ui
+  
+  run_ui_tests:
+
+    needs: build_test
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout repo
+      uses: actions/checkout@v4
+    - name: Use Node.js 20.x
+      uses: actions/setup-node@v4
+      with:
+        node-version: 20.x
+        cache: 'npm'
+    - name: Install node modules (npm dependencies)
+      run: npm install
+    - name: Install Playwright browsers
+      run: npx playwright install
+    - name: start app
+      run: npm start &
+    - name: run UI tests
+      run: npm run test:ui
+      
